--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "url": "https://github.com/ceejbot/numbat-emitter/issues"
   },
   "dependencies": {
-    "lodash": "^2.4.1",
-    "objectstream": "0.0.4"
+    "json-stream": "^0.2.0",
+    "lodash": "^2.4.1"
   },
   "devDependencies": {
     "jshint": "^2.5.1",
