--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "json-stream": "^0.2.0",
-    "lodash": "^2.4.1"
+    "lodash": "^2.4.1",
+    "readable-stream": "^1.0.27-1"
   },
   "devDependencies": {
     "jshint": "^2.5.1",
