--- a/package.json
+++ b/package.json
@@ -7,14 +7,14 @@
     "url": "https://github.com/ceejbot/numbat-emitter/issues"
   },
   "dependencies": {
-    "json-stream": "^0.2.0",
+    "json-stream": "^0.2.2",
     "lodash": "^2.4.1",
-    "readable-stream": "^1.0.27-1"
+    "readable-stream": "^1.1.13"
   },
   "devDependencies": {
-    "jshint": "^2.5.1",
-    "lab": "^3.1.1",
-    "must": "^0.11.0"
+    "jshint": "^2.5.6",
+    "lab": "^3.2.3",
+    "must": "^0.12.0"
   },
   "homepage": "https://github.com/ceejbot/numbat-emitter",
   "keywords": [
