--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "url": "https://github.com/ceejbot/numbat-emitter/issues"
   },
   "dependencies": {
-    "json-stream": "^0.2.2",
-    "lodash": "^2.4.1",
+    "jshint": "~2.6.0",
+    "json-stream": "~1.0.0",
+    "lodash": "~3.1.0",
+    "must": "~0.12.0",
     "readable-stream": "^1.1.13"
   },
   "devDependencies": {
     "jshint": "^2.5.6",
-    "lab": "^3.2.3",
+    "lab": "~5.2.1",
     "must": "^0.12.0"
   },
   "homepage": "https://github.com/ceejbot/numbat-emitter",
@@ -30,7 +32,7 @@
     "url": "git://github.com/ceejbot/numbat-emitter.git"
   },
   "scripts": {
-    "test": "npm run check-hint && lab -v -c -t 70 test.js",
-    "check-hint": "jshint *.js"
+    "test": "npm run lint && lab -v -c -t 70 test.js",
+    "lint": "jshint *.js"
   }
 }
