--- a/package.json
+++ b/package.json
@@ -6,6 +6,21 @@
   "bugs": {
     "url": "https://github.com/ceejbot/numbat-emitter/issues"
   },
+  "config": {
+    "blanket": {
+      "pattern": [
+        "index.js"
+      ],
+      "data-cover-never": [
+        "node_modules",
+        "test.js"
+      ],
+      "output-reporter": "spec",
+      "travis-cov": {
+        "threshold": 80
+      }
+    }
+  },
   "dependencies": {
     "json-stream": "~1.0.0",
     "lodash": "~3.9.3",
@@ -13,16 +28,19 @@
     "readable-stream": "~1.1.13"
   },
   "devDependencies": {
+    "blanket": "~1.1.7",
     "jshint": "~2.8.0",
-    "lab": "~5.9.0",
-    "must": "~0.12.0"
+    "mocha": "~2.2.5",
+    "mocoverage": "~1.0.0",
+    "must": "~0.12.0",
+    "travis-cov": "~0.2.5"
   },
   "homepage": "https://github.com/ceejbot/numbat-emitter",
   "keywords": [
-    "numbat",
-    "metrics",
     "influxdb",
-    "monitoring"
+    "metrics",
+    "monitoring",
+    "numbat"
   ],
   "license": "ISC",
   "main": "index.js",
@@ -31,7 +49,9 @@
     "url": "git://github.com/ceejbot/numbat-emitter.git"
   },
   "scripts": {
-    "test": "npm run lint && lab -v -c -t 70 test.js",
-    "lint": "jshint *.js"
+    "lint": "jshint *.js",
+    "test": "mocha -t 5000 --check-leaks --ui exports --require blanket -R mocoverage test.js",
+    "test-cov": "mocha -t 5000 --require blanket -R travis-cov test.js",
+    "test-travis": "npm run lint && mocha -R spec -t 5000 test.js && npm run test-cov"
   }
 }
