--- a/package.json
+++ b/package.json
@@ -28,10 +28,9 @@
     "readable-stream": "~2.0.1"
   },
   "devDependencies": {
-    "json-stream": "~1.0.0",
     "blanket": "~1.1.7",
-    "jscs": "~2.0.0",
-    "jshint": "~2.8.0",
+    "eslint": "~1.3.1",
+    "json-stream": "~1.0.0",
     "mocha": "~2.2.5",
     "mocoverage": "~1.0.0",
     "must": "~0.12.0",
@@ -51,9 +50,9 @@
     "url": "git://github.com/ceejbot/numbat-emitter.git"
   },
   "scripts": {
-    "lint": "jshint *.js lib/*.js && jscs *.js lib/*.js",
+    "lint": "eslint *.js lib/*.js",
     "test": "mocha -t 5000 --check-leaks --ui exports --require blanket -R mocoverage test.js",
     "test-cov": "mocha -t 5000 --require blanket -R travis-cov test.js",
-    "test-travis": "npm run lint && mocha -R spec -t 5000 test.js && npm run test-cov"
+    "test-travis": "mocha -R spec -t 5000 test.js && npm run test-cov"
   }
 }
