Whitespace only commit.

--- a/package.json
+++ b/package.json
@@ -53,6 +53,6 @@
     "lint": "eslint *.js lib/*.js",
     "test": "mocha -t 5000 --check-leaks --ui exports --require blanket -R mocoverage test.js",
     "test-cov": "mocha -t 5000 --require blanket -R travis-cov test.js",
-    "test-travis": "mocha -R spec -t 5000 test.js && npm run test-cov"
+    "test-travis": "npm run lint && mocha -R spec -t 5000 test.js && npm run test-cov"
   }
 }
