--- a/.eslintrc
+++ b/.eslintrc
@@ -50,7 +50,7 @@
         "global-strict": 0,
         "guard-for-in": 0,
         "handle-callback-err": [2, "^(err|error|anySpecificError)$" ],
-        "indent": 0,
+        "indent": [2, "tab"],
         "max-depth": 0,
         "max-len": 0,
         "max-nested-callbacks": 0,
