--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
-sudo: false
 language: node_js
 node_js:
     - "0.10"
-    - "iojs"
+    - '4.2'
+    - '5.1'
+script:
+    - npm run test-travis
+sudo: false
