--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   "dependencies": {
     "discard-stream": "^1.0.1",
     "lodash": "~3.10.1",
-    "readable-stream": "~2.0.1"
+    "readable-stream": "~2.0.1",
+    "faye-websocket": "0.10.0"
   },
   "devDependencies": {
     "blanket": "~1.2.1",
