--- a/.eslintrc
+++ b/.eslintrc
@@ -51,6 +51,7 @@
         "guard-for-in": 0,
         "handle-callback-err": [2, "^(err|error|anySpecificError)$" ],
         "indent": [2, "tab"],
+        "keyword-spacing": 2,
         "max-depth": 0,
         "max-len": 0,
         "max-nested-callbacks": 0,
@@ -74,7 +75,6 @@
         "no-else-return": 0,
         "no-empty": 0,
         "no-empty-character-class": 2,
-        "no-empty-label": 2,
         "no-eq-null": 0,
         "no-eval": 2,
         "no-ex-assign": 2,
@@ -154,12 +154,10 @@
         "semi": [2, "always"],
         "sort-vars": 0,
         "space-before-function-paren": [2, "never"],
-        "space-after-keywords": [2, "always"],
         "space-before-blocks": [2, "always"],
         "space-in-brackets": 0,
         "space-in-parens": [2, "never"],
         "space-infix-ops": 2,
-        "space-return-throw-case": 2,
         "space-unary-ops": [2, { "words": true, "nonwords": false }],
         "strict": 0,
         "use-isnan": 2,
