--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 language: node_js
 node_js:
-    - "0.10"
     - '4'
     - '5'
     - '6'
 script:
     - npm run travis
 sudo: false
+after_success: npm run coverage
