--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
   "dependencies": {
     "discard-stream": "^1.0.1",
     "lodash": "^4.17.10",
-    "readable-stream": "~2.3.3",
+    "readable-stream": "^2.3.6",
     "request": "^2.86.0",
     "squeaky": "^1.4.2",
     "ws": "^5.1.1"
   },
   "devDependencies": {
     "coveralls": "^3.0.1",
-    "eslint-config-ceejbot": "~1.0.4",
+    "eslint-config-ceejbot": "^1.1.1",
     "json-stream": "1.*",
     "mocha": "^5.1.1",
     "must": "~0.13.4",
