--- a/package.json
+++ b/package.json
@@ -8,20 +8,20 @@
   },
   "dependencies": {
     "discard-stream": "^1.0.1",
-    "lodash": "~4.17.4",
-    "readable-stream": "~2.3.3",
-    "request": "~2.81.0",
-    "squeaky": "^1.0.3",
-    "ws": "~3.1.0"
+    "lodash": "^4.17.10",
+    "readable-stream": "^2.3.6",
+    "request": "^2.86.0",
+    "squeaky": "^1.4.2",
+    "ws": "^5.1.1"
   },
   "devDependencies": {
-    "coveralls": "~2.13.0",
-    "eslint-config-ceejbot": "~1.0.4",
+    "coveralls": "^3.0.1",
+    "eslint-config-ceejbot": "^1.1.1",
     "json-stream": "1.*",
-    "mocha": "~3.2.0",
+    "mocha": "^5.1.1",
     "must": "~0.13.4",
-    "nyc": "~10.2.0",
-    "xo": "~0.18.1"
+    "nyc": "^11.8.0",
+    "xo": "^0.21.0"
   },
   "homepage": "https://github.com/numbat-metrics/numbat-emitter",
   "keywords": [
@@ -39,7 +39,7 @@
   "scripts": {
     "coverage": "nyc report --reporter=text-lcov | coveralls",
     "lint": "xo",
-    "test": "nyc mocha -t 5000 --check-leaks -R spec test/",
+    "test": "nyc mocha -t 5000 --check-leaks --exit -R spec test/",
     "travis": "npm run lint && npm test"
   },
   "xo": {
